[package]
name = "sign-and-verify-bench"
version = "0.1.0"
authors = ["Fredrik Østrem <fredrik.ostrem@cognite.com>"]
edition = "2018"

[dependencies]
jsonwebtoken = "7.2.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "benches"
harness = false
